@@ -2,6 +2,9 @@ lib/RFC/RFC822/Address.pm
 MANIFEST
 Makefile.PL
 t/000_tests.t
+t/950_pod.t
+t/960_pod_coverage.t
+t/990_kwalitee.t
 Changes
 README
 META.yml                                 Module meta-data (added by MakeMaker)
